<?xml version="1.0" encoding="utf-8"?>
<!--
 Paperclickers - Affordable solution for classroom response system.

 Copyright (C) 2015-2018 Eduardo Valle Jr <dovalle@dca.fee.unicamp.br>
 Copyright (C) 2015-2018 Eduardo Seiti de Oliveira <eduseiti@dca.fee.unicamp.br>

 This program is free software; you can redistribute it and/or
 modify it under the terms of the GNU General Public License
 as published by the Free Software Foundation; either version 2
 of the License, or (at your option) any later version.

 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with this program; if not, write to the Free Software
 Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.paperclickers.onboarding.OnboardingActivity">

    <android.support.v4.view.ViewPager
        android:id="@+id/onboarding_carousel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/onboarding_page_indicators" />

    <LinearLayout
        android:id="@+id/onboarding_page_indicators"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_above="@+id/onboarding_start_message">
    </LinearLayout>

    <LinearLayout
        android:id="@+id/onboarding_start_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/get_started_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/get_started"
            android:textColor="@android:color/black"
            android:textSize="20dp" />

        <LinearLayout
            android:id="@+id/onboarding_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_start_with_tips"
                android:layout_width="@dimen/buttonStart_width"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="10dp"
                android:text="@string/start_button_with_tips"
                android:textColor="@drawable/press_button_text_color"
                android:textSize="@dimen/buttonStart_text_size"
                android:fontFamily="sans-serif-medium"
                android:background="@drawable/press_button" />

            <Button
                android:id="@+id/button_start_no_tips"
                android:layout_width="@dimen/buttonStart_width"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="10dp"
                android:text="@string/start_button_no_tips"
                android:textColor="@drawable/press_button_text_color"
                android:textSize="@dimen/buttonStart_text_size"
                android:fontFamily="sans-serif-medium"
                android:background="@drawable/press_button" />
        </LinearLayout>

        <TextView
            android:id="@+id/enable_guided_settings_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:text="@string/include_tips_in_settings"
            android:textColor="@android:color/black"
            android:textSize="15dp" />
    </LinearLayout>
</RelativeLayout>